--- a/apache_app.conf
+++ b/apache_app.conf
@@ -8,4 +8,4 @@ RewriteRule ^ index.php [L]
 
 Header set Access-Control-Allow-Origin "*"
 Header set Access-Control-Allow-Methods "POST, GET, OPTIONS, DELETE, PUT"
-Header set Access-Control-Allow-Headers "Content-Type, Authorization"
+Header set Access-Control-Allow-Headers "Origin, Accept, Content-Type, X-Requested-With"
